--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>PROXIMAMENTE</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
+
 <body>
-    hola
+
+  <!-- ======= Header ======= -->
+  <header id="header">
+    <div class="container">
+
+      <h1><a href="index.html">UPPSALA</a></h1>
+      <h2 id="output">Muy pronto <span></span> <!--from Buenos Aires--></h2>
+
+          <!-- ======= progress  ======= -->
+    <div class="skills container">
+
+      <div class="row skills-content">
+
+        <div class="col-lg-6">
+
+          <div class="progress">
+            <span class="skill">PROCESO ACTUAL 5%</span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div><!-- End progress -->
+
+      <div class="social-links">
+        <a href="https://www.instagram.com/uppsala.ar/" class="uppsala" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="mailto:uppsala.gym@gmail.com" class="mail" target="_blank"><i class="bi bi-mailbox2"></i></a>
+        <a href="https://www.instagram.com/descendantplanning/" class="descendant" target="_blank"><i class="bi bi-instagram"></i></a>
+        
+      </div>
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script  src="assets/js/script.js"></script>
+
 </body>
+
 </html>
