--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">UPPSALA</a></h1>
+      <a href="https://uppsala.ar/" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       <h2 id="output">Muy pronto <span></span> <!--from Buenos Aires--></h2>
 
           <!-- ======= progress  ======= -->
@@ -42,9 +42,9 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">PROCESO ACTUAL 5%</span>
+            <span class="skill">PROCESO ACTUAL 7%</span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
