Actualizacion V-0.2 - Fix Redireccionamientos

--- a/index.html
+++ b/index.html
@@ -365,14 +365,14 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
-                                    <a href="portfolio-grid-view.html" rel="tag">descendant</a>
+                                    <a href="descendant.html" rel="tag">descendant</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="portfolio-single-detail-style.html">CROSSFIT</a>
+                                    <a href="descendant.html">CROSSFIT</a>
                                  </h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="portfolio-single-detail-style.html">
+                                 <a class="pbmit-svg-btn" href="descendant.html">
                                     <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                        <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                        <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -384,13 +384,13 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
-                                    <a href="portfolio-grid-view.html" rel="tag">uppsala</a>
+                                    <a href="#" rel="tag">uppsala</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="portfolio-single-detail-style.html">FUNCTIONAL</a></h3>
+                                    <a href="#">FUNCTIONAL</a></h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="portfolio-single-detail-style.html">
+                                 <a class="pbmit-svg-btn" href="#">
                                     <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                        <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                        <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -402,14 +402,14 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
-                                    <a href="portfolio-grid-view.html" rel="tag">uppsala</a>
+                                    <a href="#" rel="tag">uppsala</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="portfolio-single-detail-style.html">BOXEO</a>
+                                    <a href="#">BOXEO</a>
                                  </h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="portfolio-single-detail-style.html">
+                                 <a class="pbmit-svg-btn" href="#">
                                     <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                        <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                        <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -421,14 +421,14 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
-                                    <a href="portfolio-grid-view.html" rel="tag">uppsala</a>
+                                    <a href="#" rel="tag">uppsala</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="portfolio-single-detail-style.html">PERFOMANCE</a>
+                                    <a href="#">PERFOMANCE</a>
                                  </h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="portfolio-single-detail-style.html">
+                                 <a class="pbmit-svg-btn" href="#">
                                     <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                        <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                        <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -533,7 +533,7 @@
                               </ul>
                               <div class="pbmit-heading-desc">Texto Prueba Texto Prueba Texto Prueba Texto Prueba Texto Prueba Texto Prueba Texto Prueba Texto Prueba</div>
                               <div class="pbmit-marquee-text-btn">
-                                 <a href="portfolio-grid-view.html" class="pbmit-btn pbmit-btn-white">
+                                 <a href="#" class="pbmit-btn pbmit-btn-white">
                                     <span class="button-text">Texto Prueba</span>				
                                  </a>
                               </div>
@@ -569,7 +569,7 @@
                                  <h4>PROGRESIÓN </h4>
                               </div>
                               <div class="pbminfotech-static-box-desc">Nuestros entrenadores crearán el entrenamiento corporal perfecto para ti y profesionales del físico.</div>
-                              <a href="about-us-01.html">
+                              <a href="our-classes.html">
                                  <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                     <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                     <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -599,7 +599,7 @@
                                  <h4>Acción</h4>
                               </div>
                               <div class="pbminfotech-static-box-desc">Nuestros entrenadores crearán el entrenamiento corporal perfecto para ti y profesionales del físico.</div>
-                              <a href="about-us-01.html">
+                              <a href="our-classes.html">
                                  <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                     <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                     <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -629,7 +629,7 @@
                                  <h4>CROSSFIT </h4>
                               </div>
                               <div class="pbminfotech-static-box-desc">Nuestros entrenadores crearán el entrenamiento corporal perfecto para ti y profesionales del físico.</div>
-                              <a href="about-us-01.html">
+                              <a href="our-classes.html">
                                  <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                     <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                     <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -662,7 +662,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="team-member-details.html">Vega</a>
+                                          <a href="descendant.html">Vega</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -683,7 +683,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="team-member-details.html">Pablito</a>
+                                          <a href="descendant.html">Pablito</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -704,7 +704,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="team-member-details.html">Rocinredes</a>
+                                          <a href="descendant.html">Rocinredes</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -725,7 +725,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="team-member-details.html">Nico</a>
+                                          <a href="descendant.html">Nico</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -746,7 +746,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="team-member-details.html">Fraga</a>
+                                          <a href="descendant.html">Fraga</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -766,7 +766,7 @@
                      </div>
                      <div class="col-md-3">
                         <div class="pbmit-ihbox pbmit-ihbox-style-1 d-flex justify-content-end">
-                           <a class="pbmit-ihbox-wrap-link" href="our-team-member.html">
+                           <a class="pbmit-ihbox-wrap-link" href="descendant.html">
                            <div class="pbmit-ihbox-box">
                               <div class="pbmit-ihbox-svg">
                                  <div class="pbmit-ihbox-svg-wrapper">
