--- a/contact-us.html
+++ b/contact-us.html
@@ -236,12 +236,16 @@
 						</div>
 					</div>
 					<div class="col-xl-7">
-						<form class="contact-form" method="post" id="contact-form" action="">
+						<form class="contact-form" method="POST" id="contact-form" action="https://script.google.com/macros/s/AKfycbzP-2fNLT9jKWXYSvGveAFrYekKYxhCqO4MpHQ5SaH4MSL7Qe358m_RO-AHfPoEyVo/exec">
+
+							<!-- Formulario de contacto -->
+							<input type="hidden" name="formulario" value="contactoGeneral">
+
 							<h4>DEJAR UN MENSAJE</h4>
 							<div class="row">
 								<div class="col-md-6">
 									<p>
-										<input type="text" class="form-control" placeholder="Nombre" name="name" required>
+										<input type="text" class="form-control" placeholder="Nombre Completo" name="nombre" required>
 									</p>
 								</div>
 								<div class="col-md-6">
@@ -251,17 +255,17 @@
 								</div>
 								<div class="col-md-6">
 									<p>
-										<input type="tel" class="form-control" placeholder="Celular" name="number" required>
+										<input type="tel" class="form-control" placeholder="Celular" name="tel" required>
 									</p>
 								</div>
 								<div class="col-md-6">
 									<p>
-										<input type="text" class="form-control" placeholder="Asunto" name="subject" required>
+										<input type="text" class="form-control" placeholder="Asunto" name="asunto" required>
 									</p>
 								</div>
 								<div class="col-lg-12">
 									<p>
-										<textarea name="message" rows="10" class="form-control" placeholder="como podemos ayudarte? Siéntete libre de mantenerte en contacto!" required></textarea>
+										<textarea name="mensaje" rows="10" class="form-control" placeholder="como podemos ayudarte? Siéntete libre de mantenerte en contacto!" required></textarea>
 									</p>
 								</div>
 								<div class="col-lg-12">
@@ -440,55 +444,91 @@
 	<!-- Modal de contacto -->
 	<div class="modal fade modal-fondo-negro" id="modal-contacto">
 		<div class="modal-dialog">
-		   <div class="modal-content">
-			  <!-- Encabezado del modal -->
-			  <div class="modal-header border-bottom-0">
+			<div class="modal-content">
+				<!-- Encabezado del modal -->
+				<div class="modal-header border-bottom-0">
 					<h4 class="modal-title mx-auto" style="font-size: 18px;">PROBAR CLASE GRATIS</h4>
 					<button type="button" class="close btn-minimalista" data-dismiss="modal">&times;</button>
-			  </div>
-  
-			  <!-- Cuerpo del modal -->
-			  <div class="modal-body">
+				</div>
+
+				<!-- Cuerpo del modal -->
+				<div class="modal-body">
 					<!-- Formulario de contacto -->
-					<form action="tu-url-de-accion.php" method="POST">
-					   <div class="col-xs-6 form-group uppsala-col-6">
-						  <input type="text" name="nombre" class="form-control input-lg" placeholder="Nombre" required>
-					   </div>
-					   <div class="col-xs-6 form-group uppsala-col-6">
-						  <input type="text" name="apellido" class="form-control input-lg" placeholder="Apellido" required>
-					   </div>
-					   <!-- Agrega más campos y contenido según tus necesidades -->
-					   <div class="row">
-						  <div class="col-xs-6 form-group uppsala-col-6">
+					<form id="clasePrueba" action="https://script.google.com/macros/s/AKfycbzP-2fNLT9jKWXYSvGveAFrYekKYxhCqO4MpHQ5SaH4MSL7Qe358m_RO-AHfPoEyVo/exec" method="POST">
+
+						<!-- Formulario de contacto -->
+						<input type="hidden" name="formulario" value="clasePrueba">
+
+						<div class="col-xs-6 form-group uppsala-col-6">
+							<input type="text" name="nombre" class="form-control input-lg" placeholder="Nombre" required>
+						</div>
+						<div class="col-xs-6 form-group uppsala-col-6">
+							<input type="text" name="apellido" class="form-control input-lg" placeholder="Apellido" required>
+						</div>
+						<!-- Agrega más campos y contenido según tus necesidades -->
+						<div class="row">
+							<div class="col-xs-6 form-group uppsala-col-6">
 								<input type="email" name="email" class="form-control input-lg" placeholder="Email" required>
-						  </div>
-						  <div class="col-xs-6 form-group uppsala-col-6">
-								<input type="number" name="telefono" class="form-control input-lg" placeholder="Celular" required>
-						  </div>
-						  <div class="clearfix"></div>
-					   </div>
-  
-					   <!-- Pie del modal (botones de Enviar y Cerrar) -->
-					   <div class="modal-footer">
-						  <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #ADFE19; color: #000;">Enviar</button>
-					   </div>
+							</div>
+							<div class="col-xs-6 form-group uppsala-col-6">
+								<input type="tel" name="tel" class="form-control input-lg" placeholder="Celular" required>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+
+						<!-- Pie del modal (botones de Enviar y Cerrar) -->
+						<div class="modal-footer">
+							<button type="submit" class="btn btn-primary" style="width: 100%; background-color: #ADFE19; color: #000;">Enviar</button>
+						</div>
 					</form>
-			  </div>
-		   </div>
+				</div>
+			</div>
 		</div>
 	</div>
-  
+
 	<!-- Tu JavaScript al final del cuerpo -->
 	<script>
 		// Función para abrir el modal
 		document.getElementById("abrir-modal").addEventListener("click", function() {
 			document.getElementById("modal-contacto").style.display = "block";
 		});
-  
+
 		// Función para cerrar el modal
 		document.getElementById("cerrar-modal").addEventListener("click", function() {
 			document.getElementById("modal-contacto").style.display = "none";
 		});
+	</script>
+
+	<!-- script -->
+	<script>
+		function enviarDatos(formulario) {
+		   formulario.addEventListener("submit", function (e) {
+			  e.preventDefault();
+			  const formData = new FormData(this);
+			  fetch("https://script.google.com/macros/s/AKfycbzP-2fNLT9jKWXYSvGveAFrYekKYxhCqO4MpHQ5SaH4MSL7Qe358m_RO-AHfPoEyVo/exec", {
+			  method: "POST",
+			  body: formData
+			  })
+			  .then(() => {
+				 // Success message
+				 alert("¡Datos enviados con éxito!");
+				 formulario.reset();
+			  })
+			  .catch(() => {
+				 // Error message
+				 alert("¡Error al enviar datos!");
+				 formulario.reset();
+			  });
+		   });
+		}
+  
+		// Manejar el formulario de Clase de Prueba
+		const clasePruebaForm = document.getElementById("clasePrueba");
+		enviarDatos(clasePruebaForm);
+  
+		// Manejar el formulario de Contacto General
+		const contactoGeneralForm = document.getElementById("contact-form");
+		enviarDatos(contactoGeneralForm);
 	</script>
  
    <!-- JS 
@@ -527,6 +567,12 @@
       <script src='js/gsap-animation.js'></script>
       <!-- Scripts JS -->
       <script src="js/scripts.js"></script>
+
+
+	  <!-- MODAL -->
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
       
 </body>
 
