--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,11 @@
             <!-- Cuerpo del modal -->
             <div class="modal-body">
                   <!-- Formulario de contacto -->
-                  <form action="tu-url-de-accion.php" method="POST">
+                  <form id="clasePrueba" action="https://script.google.com/macros/s/AKfycbzP-2fNLT9jKWXYSvGveAFrYekKYxhCqO4MpHQ5SaH4MSL7Qe358m_RO-AHfPoEyVo/exec" method="POST">
+
+                     <!-- Formulario de contacto -->
+                     <input type="hidden" name="formulario" value="clasePrueba">
+
                      <div class="col-xs-6 form-group uppsala-col-6">
                         <input type="text" name="nombre" class="form-control input-lg" placeholder="Nombre" required>
                      </div>
@@ -1029,7 +1033,7 @@
                               <input type="email" name="email" class="form-control input-lg" placeholder="Email" required>
                         </div>
                         <div class="col-xs-6 form-group uppsala-col-6">
-                              <input type="number" name="telefono" class="form-control input-lg" placeholder="Celular" required>
+                              <input type="tel" name="tel" class="form-control input-lg" placeholder="Celular" required>
                         </div>
                         <div class="clearfix"></div>
                      </div>
@@ -1056,6 +1060,34 @@
           document.getElementById("modal-contacto").style.display = "none";
       });
    </script>
+
+   <script>
+      function enviarDatos(formulario) {
+         formulario.addEventListener("submit", function (e) {
+            e.preventDefault();
+            const formData = new FormData(this);
+            fetch("https://script.google.com/macros/s/AKfycbzP-2fNLT9jKWXYSvGveAFrYekKYxhCqO4MpHQ5SaH4MSL7Qe358m_RO-AHfPoEyVo/exec", {
+            method: "POST",
+            body: formData
+            })
+            .then(() => {
+               // Success message
+               alert("¡Datos enviados con éxito!");
+               formulario.reset();
+            })
+            .catch(() => {
+               // Error message
+               alert("¡Error al enviar datos!");
+               formulario.reset();
+            });
+         });
+      }
+
+      // Manejar el formulario de Clase de Prueba
+      const clasePruebaForm = document.getElementById("clasePrueba");
+      enviarDatos(clasePruebaForm);
+   </script>
+
 
       <!-- JS
          ============================================ -->
@@ -1095,7 +1127,7 @@
       <script src="js/scripts.js"></script>
       
 
-      
+      <!-- MODAL -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
