Actualizacion de colores

--- a/descendant.html
+++ b/descendant.html
@@ -104,7 +104,7 @@
                      <div class="menu-right-box d-flex align-items-center">
                         <div class="pbmit-header-button">
                            <a href="#" class="pbmit-btn pbmit-btn-global" data-toggle="modal" data-target="#modal-contacto">
-                           <span class="button-text">PROBAR CLASE GRATIS</span>				
+                           <span class="button-text" style="color: #ffffff;">PROBAR CLASE GRATIS</span>				
                            </a>
                         </div>
                      </div>
@@ -512,7 +512,7 @@
 
 	<div class="boton-probarclase">
 		<a href="#" data-toggle="modal" data-target="#modal-contacto">
-			<span class="probarclase-text">PROBAR CLASE GRATIS</span>
+			<span class="probarclase-text" style="color: #ffffff;">PROBAR CLASE GRATIS</span>
 		</a>
 	</div>
 
@@ -523,13 +523,13 @@
 				position: fixed;
 				top: 100px; /* Alinear en la parte superior */
 				width: 100%; /* Ocupar todo el ancho de la pantalla */
-				background-color: #ADFE19;
+				background-color: #79170F;
 				text-align: center; /* Centrar el texto horizontalmente */
 				padding: 15px 0; /* Ajustar el relleno vertical según sea necesario */
 				z-index: 3;
 			}
 			.probarclase-text {
-				color: #000; /* Cambiar el color del texto a negro */
+            color: #ffffff; /* Cambiar el color del texto a negro */
 				font-size: 20px;
 				font-weight: 600;
 				text-transform: uppercase;
@@ -603,7 +603,7 @@
 
 						<!-- Pie del modal (botones de Enviar y Cerrar) -->
 						<div class="modal-footer">
-							<button type="submit" class="btn btn-primary" style="width: 100%; background-color: #ADFE19; color: #000;">Enviar</button>
+							<button type="submit" class="btn btn-primary" style="width: 100%; background-color: #79170F; color: #ffffff;">Enviar</button>
 						</div>
 					</form>
 				</div>
