--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                               <div class="menu-right-box d-flex align-items-center">
                                  <div class="pbmit-header-button">
                                     <a href="#" class="pbmit-btn pbmit-btn-global" data-toggle="modal" data-target="#modal-contacto">
-                                       <span class="button-text">PROBAR CLASE GRATIS</span>				
+                                       <span class="button-text" style="color: #ffffff;">PROBAR CLASE GRATIS</span>					
                                     </a>
                                  </div>
                               </div>
@@ -303,7 +303,7 @@
                            <div class="swiper-slide">
                               <article class="pbmit-marquee-effect-style-2">
                                  <div class="pbmit-tag-wrapper">
-                                    <h2 class="pbmit-element-title">FUNCTIONAL</h2>
+                                    <h2 class="pbmit-element-title">FUNCIONAL</h2>
                                  </div>
                               </article>
                            </div>
@@ -311,13 +311,6 @@
                               <article class="pbmit-marquee-effect-style-2">
                                  <div class="pbmit-tag-wrapper">
                                     <h2 class="pbmit-element-title">BOXEO</h2>
-                                 </div>
-                              </article>
-                           </div>
-                           <div class="swiper-slide">
-                              <article class="pbmit-marquee-effect-style-2">
-                                 <div class="pbmit-tag-wrapper">
-                                    <h2 class="pbmit-element-title">PERFOMANCE</h2>
                                  </div>
                               </article>
                            </div>
@@ -331,7 +324,7 @@
                            <div class="swiper-slide">
                               <article class="pbmit-marquee-effect-style-2">
                                  <div class="pbmit-tag-wrapper">
-                                    <h2 class="pbmit-element-title">FUNCTIONAL</h2>
+                                    <h2 class="pbmit-element-title">FUNCIONAL</h2>
                                  </div>
                               </article>
                            </div>
@@ -345,7 +338,14 @@
                            <div class="swiper-slide">
                               <article class="pbmit-marquee-effect-style-2">
                                  <div class="pbmit-tag-wrapper">
-                                    <h2 class="pbmit-element-title">PERFOMANCE</h2>
+                                    <h2 class="pbmit-element-title">CROSSFIT</h2>
+                                 </div>
+                              </article>
+                           </div>
+                           <div class="swiper-slide">
+                              <article class="pbmit-marquee-effect-style-2">
+                                 <div class="pbmit-tag-wrapper">
+                                    <h2 class="pbmit-element-title">FUNCIONAL</h2>
                                  </div>
                               </article>
                            </div>
@@ -365,11 +365,29 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
+                                    <a href="boxeo.html" rel="tag">uppsala</a>
+                                 </div>
+                                 <h3 class="pbmit-portfolio-title">
+                                    <a href="boxeo.html">BOXEO</a>
+                                 </h3>
+                              </div>
+                              <div class="pbmit-portfolio-btn">
+                                 <a class="pbmit-svg-btn" href="boxeo.html">
+                                    <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
+                                       <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
+                                       <line x1="1.2" y1="1" x2="18" y2="1"></line>
+                                       <line x1="18" y1="17.8" x2="18" y2="1"></line>
+                                    </svg>
+                                 </a>
+                              </div>
+                           </li>
+                           <li>
+                              <div class="pbminfotech-box-content-wrapper">
+                                 <div class="pbmit-port-cat">
                                     <a href="descendant.html" rel="tag">descendant</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="descendant.html">CROSSFIT</a>
-                                 </h3>
+                                    <a href="descendant.html">CROSSFIT</a></h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
                                  <a class="pbmit-svg-btn" href="descendant.html">
@@ -384,51 +402,14 @@
                            <li>
                               <div class="pbminfotech-box-content-wrapper">
                                  <div class="pbmit-port-cat">
-                                    <a href="#" rel="tag">uppsala</a>
+                                    <a href="funcional.html" rel="tag">uppsala</a>
                                  </div>
                                  <h3 class="pbmit-portfolio-title">
-                                    <a href="#">FUNCTIONAL</a></h3>
-                              </div>
-                              <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="#">
-                                    <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
-                                       <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
-                                       <line x1="1.2" y1="1" x2="18" y2="1"></line>
-                                       <line x1="18" y1="17.8" x2="18" y2="1"></line>
-                                    </svg>
-                                 </a>
-                              </div>
-                           </li>
-                           <li>
-                              <div class="pbminfotech-box-content-wrapper">
-                                 <div class="pbmit-port-cat">
-                                    <a href="#" rel="tag">uppsala</a>
-                                 </div>
-                                 <h3 class="pbmit-portfolio-title">
-                                    <a href="#">BOXEO</a>
+                                    <a href="funcional.html">FUNCIONAL</a>
                                  </h3>
                               </div>
                               <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="#">
-                                    <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
-                                       <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
-                                       <line x1="1.2" y1="1" x2="18" y2="1"></line>
-                                       <line x1="18" y1="17.8" x2="18" y2="1"></line>
-                                    </svg>
-                                 </a>
-                              </div>
-                           </li>
-                           <li>
-                              <div class="pbminfotech-box-content-wrapper">
-                                 <div class="pbmit-port-cat">
-                                    <a href="#" rel="tag">uppsala</a>
-                                 </div>
-                                 <h3 class="pbmit-portfolio-title">
-                                    <a href="#">PERFOMANCE</a>
-                                 </h3>
-                              </div>
-                              <div class="pbmit-portfolio-btn">
-                                 <a class="pbmit-svg-btn" href="#">
+                                 <a class="pbmit-svg-btn" href="funcional.html">
                                     <svg class="pbmit-svg-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10" height="19" viewBox="0 0 19 19" xml:space="preserve">
                                        <line x1="1" y1="18" x2="17.8" y2="1.2"></line>
                                        <line x1="1.2" y1="1" x2="18" y2="1"></line>
@@ -459,14 +440,6 @@
                                  <div class="swiper-slide-shadow"></div>
                               </div>
                               <div class="swiper-slide swiper-slide-prev">
-                                 <div class="pbmit-featured-img-wrapper">
-                                    <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-02.jpg" class="img-fluid" alt="">
-                                    </div>
-                                 </div>
-                                 <div class="swiper-slide-shadow"></div>
-                              </div>
-                              <div class="swiper-slide swiper-slide-visible swiper-slide-active">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
                                        <img src="images/demo2/project/project-img-04.jpg" class="img-fluid" alt="">
@@ -500,7 +473,7 @@
                               </div>
                               <div class="pbmit-tag-wrapper pbmit-front-text">
                                  <div class="pbmit-marquee-position">
-                                    <h2 class="pbmit-element-title">
+                                    <h2 class="pbmit-element-title" style="color: #ffffff;">
                                        <span><strong>35</strong>Entrenamiento en grupo</span>
                                        <span><strong>50</strong>Clases individuales</span>
                                        <span><strong>09</strong>Gran instructor de fitness</span>
@@ -510,7 +483,7 @@
                                  </div>
                               </div>
                               <div class="pbmit-tag-wrapper pbmit-marquee-position pbmit-front-back">
-                                 <h2 class="pbmit-element-title"><span>
+                                 <h2 class="pbmit-element-title" style="color: #79170F;"><span>
                                     <strong>35</strong>Entrenamiento en grupo</span>
                                     <span><strong>50</strong>Clases individuales</span>
                                     <span><strong>09</strong>Gran instructor de fitness</span>
@@ -949,7 +922,7 @@
 
    <div class="boton-probarclase">
       <a href="#" data-toggle="modal" data-target="#modal-contacto">
-          <span class="probarclase-text">PROBAR CLASE GRATIS</span>
+          <span class="probarclase-text" style="color: #ffffff;">PROBAR CLASE GRATIS</span>
       </a>
   </div>
 
@@ -960,13 +933,13 @@
                position: fixed;
                top: 100px; /* Alinear en la parte superior */
                width: 100%; /* Ocupar todo el ancho de la pantalla */
-               background-color: #ADFE19;
+               background-color: #79170F;
                text-align: center; /* Centrar el texto horizontalmente */
                padding: 15px 0; /* Ajustar el relleno vertical según sea necesario */
                z-index: 3;
          }
          .probarclase-text {
-            color: #000; /* Cambiar el color del texto a negro */
+            color: #ffffff; /* Cambiar el color del texto a negro */
             font-size: 20px;
             font-weight: 600;
             text-transform: uppercase;
@@ -1040,7 +1013,7 @@
 
                      <!-- Pie del modal (botones de Enviar y Cerrar) -->
                      <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #ADFE19; color: #000;">Enviar</button>
+                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #79170F; color: #ffffff;">Enviar</button>
                      </div>
                   </form>
             </div>
