Actualizacion de colores e icons

--- a/descendant.html
+++ b/descendant.html
@@ -523,7 +523,7 @@
 				position: fixed;
 				top: 100px; /* Alinear en la parte superior */
 				width: 100%; /* Ocupar todo el ancho de la pantalla */
-				background-color: #79170F;
+				background-color: #f80000;
 				text-align: center; /* Centrar el texto horizontalmente */
 				padding: 15px 0; /* Ajustar el relleno vertical según sea necesario */
 				z-index: 3;
@@ -603,7 +603,7 @@
 
 						<!-- Pie del modal (botones de Enviar y Cerrar) -->
 						<div class="modal-footer">
-							<button type="submit" class="btn btn-primary" style="width: 100%; background-color: #79170F; color: #ffffff;">Enviar</button>
+							<button type="submit" class="btn btn-primary" style="width: 100%; background-color: #f80000; color: #ffffff;">Enviar</button>
 						</div>
 					</form>
 				</div>
