--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                  </div>
                               </div>
                               <div class="pbmit-tag-wrapper pbmit-marquee-position pbmit-front-back">
-                                 <h2 class="pbmit-element-title" style="color: #79170F;"><span>
+                                 <h2 class="pbmit-element-title" style="color: #f80000;"><span>
                                     <strong>35</strong>Entrenamiento en grupo</span>
                                     <span><strong>50</strong>Clases individuales</span>
                                     <span><strong>09</strong>Gran instructor de fitness</span>
@@ -933,7 +933,7 @@
                position: fixed;
                top: 100px; /* Alinear en la parte superior */
                width: 100%; /* Ocupar todo el ancho de la pantalla */
-               background-color: #79170F;
+               background-color: #f80000;
                text-align: center; /* Centrar el texto horizontalmente */
                padding: 15px 0; /* Ajustar el relleno vertical según sea necesario */
                z-index: 3;
@@ -1013,7 +1013,7 @@
 
                      <!-- Pie del modal (botones de Enviar y Cerrar) -->
                      <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #79170F; color: #ffffff;">Enviar</button>
+                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #f80000; color: #ffffff;">Enviar</button>
                      </div>
                   </form>
             </div>
